load library and data

--- a/Titanic.Rmd
+++ b/Titanic.Rmd
@@ -8,6 +8,13 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
+library(dplyr)
+library(tidyr)
+library(ggplot2)
+
+train <- read.csv("train.csv")
+test <- read.csv("test.csv")
+
 
 
 ```
