--- a/Titanic.Rmd
+++ b/Titanic.Rmd
@@ -34,6 +34,6 @@ full$Age[is.na(full$Age)] <- 29.88
 hist(full$Age)
 hist(full$Fare)
 ggplot(full, aes(Embarked, Fare, fill=Embarked)) + geom_boxplot()
-
+# fix missing embarked data
 ```
 
