--- a/Titanic.Rmd
+++ b/Titanic.Rmd
@@ -5,13 +5,13 @@ date: "8/12/2017"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r, echo=F}
 # Load data and libraries
 
 library(dplyr)
 library(tidyr)
 library(ggplot2)
+library(ggthemes)
 library(randomForest)
 
 train <- read.csv("train.csv")
@@ -24,7 +24,7 @@ full <- bind_rows(train, test)
 str(full)
 summary(full)
 # Age has alot of missing values, so I'll look at replacing those first
-hist(full$Age)
+ggplot(full, aes(Age, fill=Age)) + geom_histogram(binwidth = 5) + theme_economist()
 summary(full$Age)
 # We'll replace the NA's with the mean age of 29.88
 full$Age[is.na(full$Age)] <- 29.88
@@ -33,8 +33,7 @@ full <- full[-c(62, 830), ]
 
 # Exploratory Analysis
 
-hist(full$Age)
-hist(full$Fare)
+ggplot(full, aes(Pclass, Fare, group=Pclass, fill=Pclass)) + geom_boxplot()
 ggplot(full, aes(Embarked, Fare, fill=Embarked)) + geom_boxplot()
 # Does where passangeres embarked have an impact on surviving?
 table(full$Survived, full$Embarked)
