--- a/Titanic.Rmd
+++ b/Titanic.Rmd
@@ -13,6 +13,7 @@ library(tidyr)
 library(ggplot2)
 library(ggthemes)
 library(randomForest)
+library(ggtree)
 
 train <- read.csv("train.csv", stringsAsFactors = F)
 test <- read.csv("test.csv", stringsAsFactors = F)
@@ -51,11 +52,20 @@ full$Sex <- as.factor(full$Sex)
 train <- full[1:889,]
 test <- full[890:1307,]
 
+# Create Random Forest Model
 set.seed(123)
 
 model1 <- randomForest(factor(Survived) ~ Pclass + Sex + Age + SibSp + Fare + Embarked, data=train)
+# Model error
+plot(model1, ylim=c(0,0.36)) + legend('topright', colnames(model1$err.rate), col=1:3, fill=1:3)
+importance(model1)
 
+# Test our model
 
+prediction <- predict(model1, test)
+plot(prediction)
+solution <- data.frame(PassengerID = test$PassengerId, Survived = prediction, row.names = T)
+View(solution)
 
-```
+str```
 
