--- a/Titanic.Rmd
+++ b/Titanic.Rmd
@@ -26,7 +26,7 @@ full <- bind_rows(train, test)
 str(full)
 summary(full)
 # Age has alot of missing values, so I'll look at replacing those first
-ggplot(full, aes(Age, fill=Age)) + geom_histogram(binwidth = 5) + theme_economist()
+ggplot(full, aes(Age, fill=Age)) + geom_histogram(binwidth = 5)
 summary(full$Age)
 # We'll replace the NA's with the mean age of 29.88
 full$Age[is.na(full$Age)] <- 29.88
@@ -56,35 +56,33 @@ test <- full[890:1307,]
 # Create random forest model
 
 set.seed(123)
-
-model1 <- randomForest(factor(Survived) ~ Pclass + Sex + Age + SibSp + Fare + Embarked, data=train)
+rf_model <- randomForest(factor(Survived) ~ Pclass + Sex + Age + SibSp + Fare + Embarked, data=train)
 
 # Model error
-plot(model1, ylim=c(0,0.36)) + legend('topright', colnames(model1$err.rate), col=1:3, fill=1:3)
-importance(model1)
+plot(rf_model, ylim=c(0,0.40))
 
 # Create regression tree model
 
-model2 <- rpart(factor(Survived) ~ Pclass + Sex + Age + SibSp + Fare + Embarked, data=train)
+rt_model <- rpart(factor(Survived) ~ Pclass + Sex + Age + SibSp + Fare + Embarked, data=train)
+prp(rt_model)
 
 # Test and compare models
 
 # Random Forest
-prediction1 <- predict(model1, test)
-plot(prediction1)
-solution1 <- data.frame(PassengerID = test$PassengerId, Survived = prediction1, row.names = T)
-View(solution1)
-summary(model1)
+rf_prediction <- predict(rf_model, test)
+plot(rf_prediction)
+rf_solution <- data.frame(PassengerID = test$PassengerId, Survived = rf_prediction, row.names = T)
+
 
 # Regression Tree
-prediction2 <- (predict(model2, test))
-plot(prediction2)
-solution2 <- data.frame(PassangerID = test$PassengerId, Survived = prediction1, row.names = T)
-View(solution2)
-summary(model2)
+rt_prediction <- predict(rt_model, test, type = "class")
+plot(rt_prediction)
+rt_solution <- data.frame(PassangerID = test$PassengerId, Survived = rt_prediction, row.names = T)
 
+# Write solutions to files
 
-
+write.csv(rf_solution, file = 'rf_solution.csv', row.names=F)
+write.csv(rt_solution, file = 'rt_solution.csv', row.names=F)
 
 
 ```
