--- a/Titanic.Rmd
+++ b/Titanic.Rmd
@@ -15,6 +15,7 @@ library(ggthemes)
 library(randomForest)
 library(rpart)
 library(rpart.plot)
+library(tibble)
 
 train <- read.csv("train.csv", stringsAsFactors = F)
 test <- read.csv("test.csv", stringsAsFactors = F)
@@ -32,6 +33,9 @@ summary(full$Age)
 full$Age[is.na(full$Age)] <- 29.88
 # Remove two missing embarked data points 62 and 830
 full <- full[-c(62, 830), ]
+# Replace missing fare values
+summary(full$Fare)
+full$Fare[is.na(full$Fare)] <- 33.22
 
 # Exploratory Analysis
 
@@ -72,17 +76,20 @@ prp(rt_model)
 rf_prediction <- predict(rf_model, test)
 plot(rf_prediction)
 rf_solution <- data.frame(PassengerID = test$PassengerId, Survived = rf_prediction, row.names = T)
-
+rf_solution <- rownames_to_column(rf_solution, var="PassengerID")
+summary(rf_solution)
 
 # Regression Tree
 rt_prediction <- predict(rt_model, test, type = "class")
 plot(rt_prediction)
-rt_solution <- data.frame(PassangerID = test$PassengerId, Survived = rt_prediction, row.names = T)
+rt_solution <- data.frame(PassengerID = test$PassengerId, Survived = rt_prediction, row.names = T)
+rt_solution <- rownames_to_column(rt_solution, var="PassengerID")
+summary(rf_solution)
 
 # Write solutions to files
 
-write.csv(rf_solution, file = 'rf_solution.csv', row.names=F)
-write.csv(rt_solution, file = 'rt_solution.csv', row.names=F)
+write.csv(rf_solution, file = 'rf_solution.csv', row.names=F, quote = F)
+write.csv(rt_solution, file = 'rt_solution.csv', row.names=F, quote = F)
 
 
 ```
